--- a/.env.smartchain-test
+++ b/.env.smartchain-test
@@ -1,9 +1,10 @@
 REACT_APP_API_BASE=https://market-test.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc_test
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
-REACT_APP_ACTIVITIES_URL=https://api1-bsc.fangible.com/v1/bsc_test
 REACT_APP_FIXED_CONTRACT_ADDRESS=0x1C035FD1F11eA9Bb753625fD167205Cd40029607
+REACT_APP_FIXED_CONTRACT_ADDRESS_TIME=0x2faEb20F3cec9583593d143981A04ef8ec60d241
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x7eF2DECf116f8aeBb9a7940A4713C00997DF79fd
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_TIME=0xb0F74E94c345aAc5568244fdaC7232bB98B7e79a
 REACT_APP_ERC721_WITH_SIGN=0x479FCe86f116665b8a4d07165a0eB7799A4AEb30
 REACT_APP_ERC1155_WITH_SIGN=0xaAAeAe4283635358946E653883cD12E5c06cC5E3
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x8d63ca3ba544fbb22c284f2cffe4a6b7bd243860
@@ -12,7 +13,6 @@ REACT_APP_BRAND_BASEURI=https://market-test.bounce.finance/data/
 REACT_APP_API_BASE_ETH_MAINNET=https://eth.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
 REACT_APP_NFTVIEW_URL_V2_ETH_MAINNET=https://nftview.bounce.finance/v2/main
-REACT_APP_ACTIVITIES_URL_ETH=https://api1-bsc.fangible.com/v1/eth
 REACT_APP_FIXED_CONTRACT_ADDRESS_ETH_MAINNET=0x3D8fb261562c1B5b72C36B48a90Af489679A87E3
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_ETH_MAINNET=0xe7A7E66a809B1372A5402c2B5e33263Ff1F37dC4
 REACT_APP_ERC721_WITH_SIGN_ETH_MAINNET=0xd6aFa63AD4BDc9A7D7EdB825CbA612D4F3FccF42
@@ -23,7 +23,6 @@ REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
 REACT_APP_API_BASE_HECO=https://heco-api.bounce.finance/api/v2/main
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
 REACT_APP_NFTVIEW_URL_V2_HECO=https://nftview.bounce.finance/v2/heco
-REACT_APP_ACTIVITIES_URL_HECO=https://api1-bsc.fangible.com/v1/heco
 REACT_APP_FIXED_CONTRACT_ADDRESS_HECO=0x194C02845d77ffCB8580D474Ca99013073C1eAb1
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_HECO=0xFCEc495B3FbB41fC8034E4d2Fd85289F549922b1
 REACT_APP_ERC721_WITH_SIGN_HECO=0x25A836DCBD78dcC9D29FEb8010424c2E56017325
@@ -34,9 +33,10 @@ REACT_APP_BRAND_BASEURI_HECO=https://heco-api.bounce.finance/data/
 REACT_APP_API_BASE_RINKEBY=https://market-test.bounce.finance/api/v2/rinkeby
 REACT_APP_FANGIBLE_URL_RINKEBY=https://api1-rinkeby.fangible.com/v1/rinkeby
 REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
-REACT_APP_ACTIVITIES_URL_RINKEBY=https://api1-rinkeby.fangible.com/v1/rinkeby
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
+REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY_TIME=0xd58bdfd241f8F96425f94bF1F2F66FFfAf31ee4f
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY_TIME=0xFdd9f9e38ed530372175f6e02403e355A8Aa2881
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
 REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
@@ -44,7 +44,6 @@ REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925
 REACT_APP_API_BASE_MATIC=https://bounce-market-matic.bounce.finance/api/v2/matic
 REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
 REACT_APP_NFTVIEW_URL_V2_MATIC=https://nftview.bounce.finance/v2/matic
-REACT_APP_ACTIVITIES_URL_MATIC=https://api1-matic.fangible.com/v1/matic
 REACT_APP_FIXED_CONTRACT_ADDRESS_MATIC=0x1BF765459c9405b3734d57B25c7ba45A13ce86CB
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_MATIC=0x06aA57665D43343D2D425834fc6C3bf96025992e
 REACT_APP_ERC721_WITH_SIGN_MATIC=0x52ab9455EeC37727A69A90E29b0Ce86ebD9C1338
