--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.21.1",
     "env-cmd": "^10.1.0",
     "final-form": "^4.20.2",
+    "final-form-calculate": "^1.3.2",
     "graphql": "^15.5.0",
     "history": "^4.10.1",
     "immer": "^9.0.1",
