--- a/.env.smartchain
+++ b/.env.smartchain
@@ -10,6 +10,7 @@ REACT_APP_ERC1155_WITH_SIGN=0x9f24433c60b51d2271c064028faab5da47cc714e
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2=0x356cb4004b8e7b9683a27d0047df76ae4de6e2f1
 REACT_APP_BRAND_BASEURI=https://bounce-market.bounce.finance/data/
 REACT_APP_MULTI_CALL_BSC=0x5615808C56FE548F93cD436e11BA2fA434a0A439
+REACT_APP_ROYALTY_CONFIG_BSC=
 
 REACT_APP_API_BASE_ETH_MAINNET=https://api-services.fangible.com/api/v2/eth
 REACT_APP_FANGIBLE_URL_ETH_MAINNET=https://api1-main.fangible.com/v1/main
@@ -23,6 +24,8 @@ REACT_APP_ERC1155_WITH_SIGN_ETH_MAINNET=0xD13Ad8e2B26c1c671EBf8497E4762EE9a907a4
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_ETH_MAINNET=0x8b7Dc331e25763DccFa077C96f6E6E9626E785F9
 REACT_APP_BRAND_BASEURI_ETH_MAINNET=https://eth.fangible.com/data/
 REACT_APP_MULTI_CALL_ETH_MAINNET=0xeefBa1e63905eF1D7ACbA5a8513c70307C1cE441
+REACT_APP_MULTI_CALL_ETH_MAINNET=0xeefBa1e63905eF1D7ACbA5a8513c70307C1cE441
+REACT_APP_ROYALTY_CONFIG_ETH_MAINNET=
 
 REACT_APP_MULTI_CALL_HECO=0x9a5ea64F099f4667717C1d80a64e38c4D461AD73
 REACT_APP_API_BASE_HECO=https://api-services.fangible.com/api/v2/heco
@@ -36,6 +39,7 @@ REACT_APP_ERC721_WITH_SIGN_HECO=0x25A836DCBD78dcC9D29FEb8010424c2E56017325
 REACT_APP_ERC1155_WITH_SIGN_HECO=0x94E7d2a17EAA6A86DFD2Fddb639F9878d8377CC7
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_HECO=0xeCd2B33C4e80f284c3d0BDc8147Fdf02Ca30a737
 REACT_APP_BRAND_BASEURI_HECO=https://heco-api.bounce.finance/data/
+REACT_APP_ROYALTY_CONFIG_HECO=
 
 REACT_APP_API_BASE_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/v2/rinkeby
 REACT_APP_FANGIBLE_URL_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/v2/rinkeby
@@ -47,6 +51,7 @@ REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
 REACT_APP_BRAND_BASEURI_RINKEBY=https://rinkeby-api.bounce.finance/data/
 REACT_APP_MULTI_CALL_ETH_RINKEBY=0x42Ad527de7d4e9d9d011aC45B31D8551f8Fe9821
+REACT_APP_ROYALTY_CONFIG_RINKEBY=0x822B31ab6A2E08C44800F39DB3B89D9B60FB4692
 
 REACT_APP_API_BASE_MATIC=https://api-services.fangible.com/api/v2/matic
 REACT_APP_FANGIBLE_URL_MATIC=https://api1-matic.fangible.com/v1/matic
@@ -57,3 +62,4 @@ REACT_APP_ERC721_WITH_SIGN_MATIC=0x52ab9455EeC37727A69A90E29b0Ce86ebD9C1338
 REACT_APP_ERC1155_WITH_SIGN_MATIC=0x453D1f64611C065Ff7c99D3C457754A2e20314b8
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_MATIC=0x871e155AF8F17Ca870d7b66dF79f0C88f73D42b0
 REACT_APP_BRAND_BASEURI_MATIC=https://api-services.fangible.com/matic/data/
+REACT_APP_ROYALTY_CONFIG_MATIC=
