--- a/.env.smartchain
+++ b/.env.smartchain
@@ -1,6 +1,7 @@
 REACT_APP_API_BASE=https://api-services.fangible.com/api/v2/main
 REACT_APP_FANGIBLE_URL=https://api1-bsc.fangible.com/v1/bsc
 REACT_APP_NFTVIEW_URL_V2=https://nftview.bounce.finance/v2/bsc
+REACT_APP_IMG_CDN_URL=https://ap1-cfs3-media-bounce.bounce.finance/
 REACT_APP_FIXED_CONTRACT_ADDRESS=0x58E84d90fd976A183bEfB36a69caB464bef18cC5
 REACT_APP_FIXED_CONTRACT_ADDRESS_TIME=0x8C3381bfF2dE4180A70a163c4c41dfd018926ee3
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS=0x780451a32959A96789F99398dEb6678d2c438EB4
@@ -31,6 +32,7 @@ REACT_APP_MULTI_CALL_HECO=0x9a5ea64F099f4667717C1d80a64e38c4D461AD73
 REACT_APP_API_BASE_HECO=https://api-services.fangible.com/api/v2/heco
 REACT_APP_FANGIBLE_URL_HECO=https://api1-heco.fangible.com/v1/heco
 REACT_APP_NFTVIEW_URL_V2_HECO=https://nftview.bounce.finance/v2/heco
+REACT_APP_IMG_HECO_CDN_URL=https://ap1-cfs3-heco.fangible.com/
 REACT_APP_FIXED_CONTRACT_ADDRESS_HECO=0x194C02845d77ffCB8580D474Ca99013073C1eAb1
 REACT_APP_FIXED_CONTRACT_ADDRESS_HECO_TIME=0x738de648E84b5d990DAA7e6598546f7a4eAC1BB4
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_HECO=0xFCEc495B3FbB41fC8034E4d2Fd85289F549922b1
@@ -62,6 +64,4 @@ REACT_APP_ERC721_WITH_SIGN_MATIC=0x52ab9455EeC37727A69A90E29b0Ce86ebD9C1338
 REACT_APP_ERC1155_WITH_SIGN_MATIC=0x453D1f64611C065Ff7c99D3C457754A2e20314b8
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_MATIC=0x871e155AF8F17Ca870d7b66dF79f0C88f73D42b0
 REACT_APP_BRAND_BASEURI_MATIC=https://api-services.fangible.com/matic/data/
-
-REACT_APP_IMG_CDN_URL=https://ap1-cfs3-media-bounce.bounce.finance/
-REACT_APP_IMG_HECO_CDN_URL=https://ap1-cfs3-heco.fangible.com/
+REACT_APP_ROYALTY_CONFIG_MATIC=
