--- a/.env.smartchain
+++ b/.env.smartchain
@@ -45,7 +45,7 @@ REACT_APP_ROYALTY_CONFIG_HECO=0x630F7c658267DC9b9EDf3eb92eD56F42FAC4c655
 
 REACT_APP_API_BASE_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/rinkeby
 REACT_APP_FANGIBLE_URL_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/rinkeby
-REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkebyeby
+REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
