--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/lab": "4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
+    "@react-spring/three": "9.2.3",
+    "@react-three/drei": "5.3.1",
+    "@react-three/fiber": "6.2.2",
     "@redux-requests/axios": "^1.1.1",
     "@redux-requests/core": "1.6.1",
     "@redux-requests/promise": "1.0.2",
@@ -52,6 +55,7 @@
     "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
     "swiper": "^6.5.6",
+    "three": "0.129.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.5",
