--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@types/lodash": "^4.14.169",
     "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/three": "^0.134.0",
     "@walletconnect/web3-provider": "^1.4.1",
     "ahooks": "^2.10.5",
     "axios": "^0.21.1",
