--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "redux-saga": "^1.1.3",
     "redux-smart-actions": "^1.0.0",
     "reselect": "^4.0.0",
+    "styled-components": "^5.3.3",
     "swiper": "^6.5.6",
     "three": "0.129.0",
     "typescript": "^4.1.2",
@@ -74,6 +75,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-truncate": "^2.3.3",
+    "@types/styled-components": "^5.1.18",
     "babel-loader": "8.1.0",
     "husky": "^7.0.0",
     "lint-staged": "^10.5.4",
