--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.14",
     "@binance-chain/bsc-connector": "^1.0.0",
+    "@clover-network/clover-connector": "^1.0.0",
     "@date-io/date-fns": "1.x",
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "4.11.0",
