--- a/.env.smartchain
+++ b/.env.smartchain
@@ -48,6 +48,7 @@ REACT_APP_FANGIBLE_URL_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com
 REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
+REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY_TIME=0xFdd9f9e38ed530372175f6e02403e355A8Aa2881
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
 REACT_APP_ERC1155_WITH_SIGN_RINKEBY=0x2E02F937B79bDEc42Caac216aAF1E316a8af3577
 REACT_APP_BRAND_CONTRACT_ADDRESS_V2_RINKEBY=0xa65dD27ce6D410e75bE416D813FA2B7925b69b65
