--- a/.env.smartchain
+++ b/.env.smartchain
@@ -43,7 +43,7 @@ REACT_APP_BRAND_CONTRACT_ADDRESS_V2_HECO=0x8564E1e7457BCE44d8F5F8683B4d48ebeec8b
 REACT_APP_BRAND_BASEURI_HECO=https://heco-api.bounce.finance/data/
 REACT_APP_ROYALTY_CONFIG_HECO=0x630F7c658267DC9b9EDf3eb92eD56F42FAC4c655
 
-REACT_APP_API_BASE_RINKEBY=https://api-ape-game.ccian.cc/api/v2/rinkeby
+REACT_APP_API_BASE_RINKEBY=https://api-ape-stage.ccian.cc/api/v2/rinkeby
 REACT_APP_FANGIBLE_URL_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/rinkeby
 REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
 REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
