--- a/.env.smartchain
+++ b/.env.smartchain
@@ -43,10 +43,13 @@ REACT_APP_BRAND_CONTRACT_ADDRESS_V2_HECO=0x8564E1e7457BCE44d8F5F8683B4d48ebeec8b
 REACT_APP_BRAND_BASEURI_HECO=https://heco-api.bounce.finance/data/
 REACT_APP_ROYALTY_CONFIG_HECO=0x630F7c658267DC9b9EDf3eb92eD56F42FAC4c655
 
-REACT_APP_API_BASE_RINKEBY=https://api-ape-stage.ccian.cc/api/v2/rinkeby
+REACT_APP_API_BASE_URL_RINKEBY=https://api-ape-game.ccian.cc
+REACT_APP_API_BASE_RINKEBY=https://api-ape-game.ccian.cc/api/v2/rinkeby
 REACT_APP_FANGIBLE_URL_RINKEBY=https://api-test-services-x4zssmiyv8.fangible.com/api/v2/rinkeby
 REACT_APP_NFTVIEW_URL_V2_RINKEBY=https://nftview.bounce.finance/v2/rinkeby
-REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0xA3320934F5f83D790de940B62887B5c53111a74f
+REACT_APP_FT_CONTRACT_ADDRESS_RINKEBY=0xE9EB9E2E6a03f7a78a6Cf75B15c42c8954CCD200
+REACT_APP_APE_CONTRACT_ADDRESS_RINKEBY=0x4AB5117195E6A4921aE90312a914d7f5A769455e
+REACT_APP_FIXED_CONTRACT_ADDRESS_RINKEBY=0x4E826e7368d4C814F083f2C649501F57E3265430
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY=0xeD8555460fd26D6b308D86d325F5873B7a3dbe37
 REACT_APP_ENGLISH_AUCTION_CONTRACT_ADDRESS_RINKEBY_TIME=0xFdd9f9e38ed530372175f6e02403e355A8Aa2881
 REACT_APP_ERC721_WITH_SIGN_RINKEBY=0x33095895C932845934BC0aef3b1965bCa6B06475
